[CS] Word sync with recent Rulebook changes (#126)

--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -154,7 +154,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -168,10 +168,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
-"  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Hrstka \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Tlupu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -392,26 +392,26 @@ msgstr ""
 "    \\begin{enumerate}\n"
 "      \\item \\textbf{[1. Obelisk]} Hoďte 2 \\svg{treasure} a vyberte 1 k vyřešení; poté získejte \\svg{morale_negative}.\n"
 "      \\item \\textbf{[2. Obelisk]} Zvyšte svůj příjem \\svg{gold}, \\svg{building_materials}, nebo \\svg{valuables} o 1 krok.\n"
-"      \\item \\textbf{[3. Obelisk]} Získáte Vedlejšího Hrdinu. Umístěte jeho model na toto Pole. Pokud již Vedlejšího Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné Karty ze své ruky.\n"
+"      \\item \\textbf{[3. Obelisk]} Získáte Sekundárního Hrdinu. Umístěte jeho model na toto Pole. Pokud již Sekundárního Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné Karty ze své ruky.\n"
 "      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 Karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím Balíčku Kartu dle vašeho výběru a vložte ji do své ruky.\n"
 "    \\end{enumerate}\n"
 "    \\item \\textbf{[Oběť]} Odstraňte Kartu Jednotky své Frakce z vašeho Balíčku Jednotek výměnou za:\n"
 "    \\begin{enumerate}\n"
-"      \\item *\\svgunit{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Skupiny, \\textbf{Hledejte (4)} v Balíčku Menších Artefaktů.\n"
-"      \\item *\\svgunit{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Skupiny, \\textbf{Hledejte (3)} v Balíčku Větších Artefaktů.\n"
-"      \\item *\\svgunit{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v Balíčku karet Relikvií. A nakonec, pokud byla Karta Jednotky na straně Skupiny, \\textbf{Hledejte (2)} v Balíčku \\svgunit{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
+"      \\item *\\svgunit{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (4)} v Balíčku Menších Artefaktů.\n"
+"      \\item *\\svgunit{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (3)} v Balíčku Větších Artefaktů.\n"
+"      \\item *\\svgunit{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v Balíčku karet Relikvií. A nakonec, pokud byla Karta Jednotky na straně Tlupy, \\textbf{Hledejte (2)} v Balíčku \\svgunit{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
 "  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
 "  \\item Hráč, který si zvolí \\textbf{Očištění} u Obelisku, získá titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}.} Umístěte modrou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\uv{\\textcolor{cobalt}{Rytíř Grálu}} nikdy nesmí zvolit možnost \\textbf{Oběť} při Navštěvování Obelisku.\n"
 "  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet Kostiček Frakce na obětovanou Kartu Jednotky a na Pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 Kostičky Frakce na Kartu Jednotky a 2 Kostičky Frakce na Pole Obelisku.\n"
-"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Skupina, hráč může místo toho zvolit naverbovat Málo.\n"
+"  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Tlupa, hráč může místo toho zvolit naverbovat Hrstku.\n"
 "  \\item Pokud je Jednotka naverbovaná u Obelisku poražena, Odstraňte ji.\n"
 "  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít Kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne Kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou Kartu Dovednosti.\n"
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít Kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
 "  \\item Kdykoli je vytažena Karta Prohlášení Astrologů nebo Karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte Kartu novou.\n"
 "  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
-"  \\item Ignorujte střety v Boji na Poli s Grálem.\n"
+"  \\item Ignorujte střety v Souboji na Poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se Žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo Žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
 "  \\item Aby hráč získal Žeton Grálu, musí jeho Hrdina zaplatit 2 MP na Poli s Grálem.\n"
 "  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání Žetonu Grálu odstranit Kartu Jednotky své Frakce z Balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
@@ -419,9 +419,9 @@ msgstr ""
 "  \\item Pokud se Hrdina s Žetonem Grálu vzdá, Žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
 "  \\item Pokud Neutrální armáda porazí Hrdinu s Žetonem Grálu, Žeton Grálu je umístěn na Pole, kde byl Hrdina poražen.\n"
 "  \\item Pokud Hrdina s Žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, Žeton Grálu je umístěn na Pole, kde bylo Kouzlo vyvoláno nebo použita budova.\n"
-"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
-"  \\item Hrdina s Žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na Žeton Grálu, aby byl tento efekt označen.\n"
-"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
+"  \\item Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Souboje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek a přidělili je nepřátelským Jednotkám.}\n"
+"  \\item Hrdina s Žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoliv místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na Žeton Grálu, aby byl tento efekt označen.\n"
+"  \\item Jakmile je Grál očištěn, Žeton Grálu se chová jako Trvalá Karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Kola Souboje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte Kartu, abyste odstranili až 2 \\svg{damage-red} z vašich Jednotek.}\n"
 "\\end{itemize}\n"
 "\n"
 
