--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -187,7 +187,7 @@ msgid ""
 "\\textbf{Starting Resources:} 20 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 20 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 20 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -197,7 +197,7 @@ msgid ""
 "\\textbf{Starting Income:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -210,9 +210,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item 2 × Tlupu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -312,10 +312,10 @@ msgstr ""
 "Během tohoto Scénáře:\n"
 "\\begin{itemize}\n"
 "  \\item Kdykoli je Obelisk Navštíven poprvé, hráč, který jej Navštíví, získává 2 \\svg{building_materials}.\n"
-"  \\item Náhodné Město je bráněno Zdmi a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
-"  \\item Stejně jako jakékoli jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
+"  \\item Náhodné Město je bráněno Hradbami a Bránou, když je vlastněno hráčem, ale má Střílnu pouze tehdy, pokud má hráč již Citadelu.\n"
+"  \\item Stejně jako jakékoliv jiné Město, když je Náhodné Město vlastněno hráčem, je platným místem pro tohoto hráče k:\n"
 "    \\begin{itemize}\n"
-"      \\item Umístění nově naverbovaného Vedlejšího Hrdiny.\n"
+"      \\item Umístění nově naverbovaného Sekundárního Hrdiny.\n"
 "      \\item Umístění Hlavního Hrdiny po jeho porážce.\n"
 "      \\item Dočasnému transportu armády za 8~\\svg{gold}, když je Náhodné Město napadeno.\n"
 "    \\end{itemize}\n"
