--- a/translations/force_of_will.tex/cs.po
+++ b/translations/force_of_will.tex/cs.po
@@ -38,7 +38,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -188,7 +188,7 @@ msgid ""
 "\\textbf{Starting Resources:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 15 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -201,9 +201,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item 2 × Hrstka \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -341,7 +341,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Když hráč navštíví Obelisk, hodí 2 \\svg{treasure} a vybere vyhodnotí jednu z nich.\n"
-"  \\item Hráč nesmí použít Kartu Diplomacie, aby přeskočil Boj na poli Dračí Utopie.\n"
+"  \\item Hráč nesmí použít Kartu Diplomacie, aby přeskočil Souboj na poli Dračí Utopie.\n"
 "  \\item Když se Hrdina přesune na Pole Dračí Utopie, musí bojovat podle zvolené obtížnosti s následujícím počtem Neutrálních Jednotek:\n"
 "  \\begin{itemize}\n"
 "    \\item \\textbf{Lehká:} 1 × \\svgunit{azure}, 2 × \\svgunit{silver}, 1 × \\svgunit{bronze}\n"
@@ -349,7 +349,7 @@ msgstr ""
 "    \\item \\textbf{Těžká:} 1 × \\svgunit{azure}, 3 × \\svgunit{golden}\n"
 "    \\item \\textbf{Nemožná:}  2 × \\svgunit{azure}, 2 × \\svgunit{golden}\n"
 "  \\end{itemize}\n"
-"  \\item Dodržujte tyto kroky, když začne Boj proti Neutrálním Jednotkám na Poli Dračí Utopie:\n"
+"  \\item Dodržujte tyto kroky, když začne Souboj proti Neutrálním Jednotkám na Poli Dračí Utopie:\n"
 "  \\begin{itemize}\n"
 "    \\item Umístěte až 4 své Karty Jednotek volně do středního řádku Desky Bojiště.\n"
 "    \\item Nepřátelský hráč ovládající Neutrální Jednotky umístí každou Neutrální Jednotku do jednoho ze 4 rohů Desky Bojiště.\n"
