--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -133,7 +133,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -180,7 +180,7 @@ msgid ""
 "\\textbf{Starting Resources:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -192,7 +192,7 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\n"
 
 #. type: multicols*
@@ -308,9 +308,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Málo Magogů\n"
-"  \\item Skupina Rarášků\n"
-"  \\item Skupina Kerberů\n"
+"  \\item Hrstka Magogů\n"
+"  \\item Tlupa Rarášků\n"
+"  \\item Tlupa Kerberů\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -351,7 +351,7 @@ msgid ""
 "\\textbf{Rampart Charging Army \\#1:} A Few Centaurs, a Pack of Dwarves, a Pack of Elves, a Pack of Pegasi, a Few Unicorn\n"
 "\n"
 msgstr ""
-"\\textbf{Útočící Armáda Bašty \\#1:} Málo Kentaurů, Skupina Trpaslíků, Skupina Elfů, Skupina Pegasů, Málo Jednorožců\n"
+"\\textbf{Útočící Armáda Bašty \\#1:} Hrstka Kentaurů, Tlupa Trpaslíků, Tlupa Elfů, Tlupa Pegasů, Hrstka Jednorožců\n"
 "\n"
 
 #. type: multicols*
@@ -361,7 +361,7 @@ msgid ""
 "\\textbf{Castle Charging Army \\#1:} A Pack of Marksmen, a Pack of Elves, a Few Griffins, a Pack of Zealots, a Few Champions\n"
 "\n"
 msgstr ""
-"\\textbf{Útočící Armáda Hradu \\#1:} Skupina Střelců, Skupina Elfů, Málo Gryfů, Skupina Fanatiků, Málo Šampionů\n"
+"\\textbf{Útočící Armáda Hradu \\#1:} Tlupa Střelců, Tlupa Elfů, Hrstka Gryfů, Tlupa Fanatiků, Hrstka Šampionů\n"
 "\n"
 
 #. type: multicols*
@@ -371,7 +371,7 @@ msgid ""
 "\\textbf{Rampart Charging Army \\#2:} A Pack of Dwarves, a Pack of Elves, a Few Pegasi, a Pack of Dendroids, a Pack of Unicorns\n"
 "\n"
 msgstr ""
-"\\textbf{Útočící Armáda Bašty \\#2:} Skupina Trpaslíků, Skupina Elfů, Málo Pegasů, Skupina Dendroidů, Skupina Jednorožců\n"
+"\\textbf{Útočící Armáda Bašty \\#2:} Tlupa Trpaslíků, Tlupa Elfů, Hrstka Pegasů, Tlupa Dendroidů, Tlupa Jednorožců\n"
 "\n"
 
 #. type: multicols*
@@ -381,7 +381,7 @@ msgid ""
 "\\textbf{Castle Charging Army \\#2:} A Pack of Halberdiers, a Few Griffins, a Few Crusaders, a Pack of Zealots, a Pack of Champions\n"
 "\n"
 msgstr ""
-"\\textbf{Útočící Armáda Hradu \\#2:} Skupina Halapartníků, Málo Gryfů, Málo Křižáků, Skupina Fanatiků, Skupina Šampionů\n"
+"\\textbf{Útočící Armáda Hradu \\#2:} Tlupa Halapartníků, Hrstka Gryfů, Hrstka Křižáků, Tlupa Fanatiků, Tlupa Šampionů\n"
 "\n"
 
 #. type: multicols*
@@ -411,7 +411,7 @@ msgid ""
 "\\textbf{Final Charging Army:} A Pack of Griffins, a Pack of Zealots, a Pack of Champions, a Pack of Unicorns, a Few Archangels, a ``Ballista'' war machine\n"
 "\n"
 msgstr ""
-"\\textbf{Finální Útočící Armáda:} Skupina Gryfů, Skupina Fanatiků, Skupina Šampionů, Skupina Jednorožců, Málo Archandělů, Válečný Stroj \\uv{Balista}\n"
+"\\textbf{Finální Útočící Armáda:} Tlupa Gryfů, Tlupa Fanatiků, Tlupa Šampionů, Tlupa Jednorožců, Hrstka Archandělů, Válečný Stroj \\uv{Balista}\n"
 "\n"
 
 #. type: multicols*
@@ -433,7 +433,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\textbf{Balíček Schopností/Dovedností Finální Útočící Armády:} 1 × Karta Artefaktu \\uv{Štít Prokletých}, 1 × Karta Artefaktu \\uv{Meč Pekelného Ohně},\n"
-"  1 × Karta Dovednosti \\uv{Balistika} (základní efekt), 1 × Karta Dovednosti \\uv{První pomoc} (expertní efekt)\n"
+"  1 × Karta Dovednosti \\uv{Balistika} (Běžný efekt), 1 × Karta Dovednosti \\uv{První pomoc} (Pokročilý efekt)\n"
 "\n"
 
 #. type: multicols*
@@ -443,7 +443,7 @@ msgid ""
 "Charging Armies \\#1 and \\#2 use the same AI Deck and Skill Deck. Reshuffle both Decks after Combat.\n"
 "\n"
 msgstr ""
-"Útočící Armády \\#1 a \\#2 používají stejný AI Balíček a Balíček Schopností. Po Boji oba Balíčky zamíchejte.\n"
+"Útočící Armády \\#1 a \\#2 používají stejný AI Balíček a Balíček Schopností. Po Souboji oba Balíčky zamíchejte.\n"
 "\n"
 
 #. type: multicols*
@@ -458,9 +458,9 @@ msgid ""
 "\n"
 msgstr ""
 "Obě Karty Artefaktů všech Útočících Armád jsou považovány za Schopnosti a používají \\uv{slabší} efekt uvedený na Kartě.\n"
-"\\uv{Meč Pekelného Ohně} bude použit při Útocích a Odvetných Útocích. Není použit při Útocích na Zdi nebo Brány,\n"
+"\\uv{Meč Pekelného Ohně} bude použit při Útocích a Odvetných Útocích. Není použit při Útocích na Hradby nebo Brány,\n"
 "a zůstává v platnosti na Jednotce. \\uv{Štít Prokletých} nabývá účinku, když\n"
-"jakákoliv Jednotka Útočící Armády utrpí zranění z Útoku nebo Odvetného Útoku. Pokud Karta Schopnosti AI říká \\uv{udělej to znovu}, Karty Artefaktů se nevyužívají ihned znovu, ale použijí se, jakmile je další Jednotka schopna je využít.\n"
+"jakákoliv Jednotka Útočící Armády utrpí poškození z Útoku nebo Odvetného Útoku. Pokud Karta Schopnosti AI říká \\uv{udělej to znovu}, Karty Artefaktů se nevyužívají ihned znovu, ale použijí se, jakmile je další Jednotka schopna je využít.\n"
 "\n"
 
 #. type: multicols*
@@ -556,7 +556,7 @@ msgid ""
 "You cannot Recruit a Secondary Hero.\n"
 "\n"
 msgstr ""
-"Nemůžete Naverbovat Vedlejšího Hrdinu.\n"
+"Nemůžete Naverbovat Sekundárního Hrdinu.\n"
 "\n"
 
 #. type: multicols*
@@ -576,7 +576,7 @@ msgid ""
 "You lose one Combat encounter with your Main Hero. Surrender is not an option.\n"
 "\n"
 msgstr ""
-"Prohrajete jeden Boj s vaším Hlavním Hrdinou. Kapitulace není možná.\n"
+"Prohrajete jeden Souboj s vaším Hlavním Hrdinou. Kapitulace není možná.\n"
 "\n"
 
 #. type: multicols*
@@ -788,11 +788,11 @@ msgstr ""
 "    Nepřátelský Útočící Hrdina, který se může dostat nejblíže ke Kleesivu, se pohybuje jako první.\n"
 "  \\item Hrad a Bašta již mají všechny Doly pod kontrolou ve svém území (na rozdíl od Pekla). Umístěte nepřátelské\n"
 "    Kostičky na všechny jejich Doly.\n"
-"  \\item Vaše Zdi, Brány a Střílna v Kleesivu jsou po každém Boji zcela obnoveny.\n"
-"  \\item Nepřátelské \\svg{unit_flying} Jednotky přeletí přes Zdi a Brány, aby zaútočily na vaše Jednotky, kdykoli to bude možné.\n"
+"  \\item Vaše Hradby, Brány a Střílna v Kleesivu jsou po každém Souboji zcela obnoveny.\n"
+"  \\item Nepřátelské \\svg{unit_flying} Jednotky přeletí přes Hradby a Brány, aby zaútočily na vaše Jednotky, kdykoli to bude možné.\n"
 "  \\item Nepřátelské \\svg{unit_ranged} Jednotky vždy zaútočí na Střílnu, jakmile nebudou k dispozici žádné jiné \\svg{unit_ranged} Jednotky.\n"
 "  \\item Nepřátelské Jednotky vždy zaútočí na vaše Jednotky, pokud je to možné. Pokud to není možné, zaútočí na Bránu,\n"
-"    a poté na Zdi.\n"
+"    a poté na Hradby.\n"
 "\\end{itemize}\n"
 "\n"
 
