--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -143,7 +143,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -250,7 +250,7 @@ msgid ""
 "\\textbf{Starting Resources:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -262,7 +262,7 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\n"
 
 #. type: multicols*
@@ -276,8 +276,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Skupina Rarášků\n"
-"  \\item Málo Magogů\n"
+"  \\item Tlupa Rarášků\n"
+"  \\item Hrstka Magogů\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -344,8 +344,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item \\textbf{Armáda Zlatých Draků:} Skupina Zlatých Draků, skupina Jednorožců, skupina Dendroidů, skupina Kentaurů\n"
-"  \\item \\textbf{Ivorova Armáda:} Málo Elfů\\footnote{V 9. Kole je Málo Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
+"  \\item \\textbf{Armáda Zlatých Draků:} Tlupa Zlatých Draků, Tlupa Jednorožců, Tlupa Dendroidů, Tlupa Kentaurů\n"
+"  \\item \\textbf{Ivorova Armáda:} Hrstka Elfů\\footnote{V 9. Kole je Hrstka Elfů v Ivorově armádě posíleno na Tlupu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -376,7 +376,7 @@ msgid ""
 "\\textbf{Ivor's Skill:} Archery Ability Card (it always resolves its Basic effect)\n"
 "\n"
 msgstr ""
-"\\textbf{Ivorova Schopnost:} Karta Dovednosti Lukostřelba (vždy se použije její Základní Efekt)\n"
+"\\textbf{Ivorova Schopnost:} Karta Dovednosti Lukostřelba (vždy se použije její Bežný Efekt)\n"
 "\n"
 
 #. type: multicols*
@@ -498,7 +498,7 @@ msgid ""
 "You lose one Combat encounter.\n"
 "\n"
 msgstr ""
-"Prohrajete jeden Boj.\n"
+"Prohrajete jeden Souboj.\n"
 "\n"
 
 #. type: multicols*
@@ -568,7 +568,7 @@ msgid ""
 msgstr ""
 "\\textbf{9. Kolo:}\n"
 "\\begin{itemize}\n"
-"  \\item Málo Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
+"  \\item Hrstka Elfů z Ivorovy Armády je Posíleno na Tlupu Elfů.\n"
 "    Ivorova Armáda také získává Vozík s Municí.\n"
 "\\end{itemize}\n"
 "\n"
@@ -649,7 +649,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "    \\item Váš Hrdina nezískává Zkušenosti po úrovni 5.\n"
-"    \\item Nepřátelský Hrdina se nepohybuje a čeká pouze ve svém Městě. Začíná se Zdmi a Bránou na jejich straně Desky Bojiště.\n"
+"    \\item Nepřátelský Hrdina se nepohybuje a čeká pouze ve svém Městě. Začíná se Hradbami a Bránou na jejich straně Desky Bojiště.\n"
 "    \\item Na Dílek Mapy N7 nelze vstoupit, dokud není Ivor poražen.\n"
 "    \\item Na lokaci Dračí Utopie bojuje váš Hrdina s Armádou Zlatých Draků.\n"
 "    \\item \\uv{Hradní Bránu} nelze postavit.\n"
@@ -692,5 +692,5 @@ msgstr ""
 "  };\n"
 "  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
 "  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
