--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -170,7 +170,7 @@ msgid ""
 "\\textbf{Starting Units:}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\n"
 
 #. type: multicols*
@@ -262,7 +262,7 @@ msgid ""
 "\\textbf{Starting Resources:} 15 \\svg{gold}, 1 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 15 \\svg{gold}, 1 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 15 \\svg{gold}, 1 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -272,7 +272,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 0 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 0 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -287,9 +287,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Málo Troglodytů\n"
-"  \\item Málo Zlých Očí\n"
-"  \\item Skupina Rarášků\n"
+"  \\item Hrstka Troglodytů\n"
+"  \\item Hrstka Zlých Očí\n"
+"  \\item Tlupa Rarášků\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -318,8 +318,8 @@ msgid ""
 msgstr ""
 "\\textbf{Bonus:} Vyberte jednu z následujících možností:\n"
 "\\begin{itemize}\n"
-"  \\item Přidejte si do ruky Skupinu Harpyjí.\n"
-"  \\item Přidejte si do ruky Skupinu Magogů.\n"
+"  \\item Přidejte si do ruky Tlupu Harpyjí.\n"
+"  \\item Přidejte si do ruky Tlupu Magogů.\n"
 "  \\item Přidejte si do ruky Vozík s Municí.\n"
 "  \\item Hledejte (4) v Balíčku Kouzel.\n"
 "\\end{itemize}\n"
@@ -352,7 +352,7 @@ msgid ""
 "\\textbf{General Kendal's Army:} A Pack of Archangels, a Pack of Champions, a Pack of Zealots, a Pack of Crusaders, a Pack of Griffins, a Balista War Machine\n"
 "\n"
 msgstr ""
-"\\textbf{Armáda Generála Kendala:} Skupina Archandělů, skupina Šampionů, skupina Fanatiků, skupina Křižáků, skupina Gryfů, Válečný Stroj Balista\n"
+"\\textbf{Armáda Generála Kendala:} Tlupa Archandělů, Tlupa Šampionů, Tlupa Fanatiků, Tlupa Křižáků, Tlupa Gryfů, Válečný Stroj Balista\n"
 "\n"
 
 #. type: multicols*
@@ -382,7 +382,7 @@ msgid ""
 "\\textbf{General Kendal's Skill:} Artillery Ability Card\\footnote{For General Kendal, the Artilery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}\n"
 "\n"
 msgstr ""
-"\\textbf{Schopnost Generála Kendala:} Karta Dovednosti Dělostřelectvo\\footnote{Pro Generála Kendala Karta Dovednosti Dělostřelectvo vždy používá Expertní efekt a Válečný Stroj Balista se aktivuje pokaždé, když je Karta Dovednosti Dělostřelectvo vylosována, stejně jako na začátku Kola Boje.}\n"
+"\\textbf{Schopnost Generála Kendala:} Karta Dovednosti Dělostřelectvo\\footnote{Pro Generála Kendala Karta Dovednosti Dělostřelectvo vždy používá Pokročilý efekt a Válečný Stroj Balista se aktivuje pokaždé, když je Karta Dovednosti Dělostřelectvo vylosována, stejně jako na začátku Kola Souboje.}\n"
 "\n"
 
 #. type: multicols*
@@ -422,7 +422,7 @@ msgid ""
 "\\textbf{Charging Heroes' Spell Deck:} 2 × Slow Spell Card\\footnote{All the Charging Heroes' Enemies use the same AI and Spell Decks. Reset them after every Combat.}.\n"
 "\n"
 msgstr ""
-"\\textbf{Balíček Kouzel Útočících Hrdinů:} 2 × Karta Kouzla Zpomalení\\footnote{Všichni Nepřátelští Útočící Hrdinové používají stejné Balíčky AI a Kouzel. Po každém Boji je resetujte.}.\n"
+"\\textbf{Balíček Kouzel Útočících Hrdinů:} 2 × Karta Kouzla Zpomalení\\footnote{Všichni Nepřátelští Útočící Hrdinové používají stejné Balíčky AI a Kouzel. Po každém Souboji je resetujte.}.\n"
 "\n"
 
 #. type: multicols*
@@ -561,7 +561,7 @@ msgid ""
 "Place your Secondary Hero, represented by one Dungeon Faction Hero model of your choice, on the Settlement of the F2 Map Tile. This Settlement produces no resources.\n"
 "\n"
 msgstr ""
-"Umístěte svého Vedlejšího Hrdinu, reprezentovaného jedním modelem Hrdiny Frakce Kobka (podle vašeho výběru),\n"
+"Umístěte svého Sekundárního Hrdinu, reprezentovaného jedním modelem Hrdiny Frakce Kobka (podle vašeho výběru),\n"
 "na Pole Osady Dílku F2. Tato Osada neprodukuje žádné suroviny.\n"
 "\n"
 
@@ -584,7 +584,7 @@ msgid ""
 "You lose one Combat encounter with your Main Hero (Surrendering costs 10 \\svg{gold}, and does not count as a defeat).\n"
 "\n"
 msgstr ""
-"Prohrajete jeden Boj s vaším Hlavním Hrdinou (Kapitulace stojí 10 \\svg{gold} a nepočítá se jako porážka).\n"
+"Prohrajete jeden Souboj s vaším Hlavním Hrdinou (Kapitulace stojí 10 \\svg{gold} a nepočítá se jako porážka).\n"
 "\n"
 
 #. type: multicols*
@@ -814,14 +814,14 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"    \\item Hrdina Generál Kendal se nepohybuje a čeká pouze ve svém Městě. Začíná se Zdmi, Bránou\n"
+"    \\item Hrdina Generál Kendal se nepohybuje a čeká pouze ve svém Městě. Začíná se Hradbami, Bránou\n"
 "      a Střílnou na jejich straně Desky Bojiště.\n"
-"    \\item Úroveň obtížnosti každého Boje se do konce Scénáře zvýší o jednu Úroveň\n"
+"    \\item Úroveň obtížnosti každého Souboje se do konce Scénáře zvýší o jednu Úroveň\n"
 "      (viz strana 35, \\uv{Tabulka Obtížnosti Pole} v Základních Pravidlech).\n"
 "    \\item Nepřátelští Útočící Hrdinové mají pouze 2 BP, místo 3. Ignorují vše ostatní\n"
 "      (včetně Dolů a Osad, pokud je to možné) a jdou přímo do hráčova Města Frakce (na Dílku Mapy S6).\n"
 "      Nepokračují přímo za hráčem, ale pokud se náhodou nacházejí na stejném Dílku Mapy, zaútočí\n"
-"      na Hlavního Hrdinu hráče (ne Vedlejšího).\n"
+"      na Hlavního Hrdinu hráče (ne Sekundárního).\n"
 "    \\item Nepřátelští Útočící Hrdinové se pohybují po skončení Tahu hráče.\n"
 "    \\item Hranice na Startovním Dílku Mapy Hrad S3 nelze překročit žádným způsobem, dokud\n"
 "      všechny Nepřátelské Osady (F3, F10, \\#F1) nebudou poraženy.\n"
@@ -882,9 +882,9 @@ msgstr ""
 "  \\node at (15.9, -18.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{F2}}}}};\n"
 "  \\node at (2, -4.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Steadwick}}}}};\n"
 "  \\node at (2, -5.2) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{S3}}}}};\n"
-"  \\node at (7.5, -5.4) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (7.5, -5.4) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (7.5, -6.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Bašty}}}}};\n"
-"  \\node at (12.4, -17.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (12.4, -17.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (12.4, -18.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Nekropole}}}}};\n"
-"  \\node at (2, -12.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (2, -12.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Dílky Mapy}}}}};\n"
 "  \\node at (2, -13) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Hradu}}}}};"
