--- a/translations/recommendations.tex/cs.po
+++ b/translations/recommendations.tex/cs.po
@@ -153,7 +153,7 @@ msgid ""
 "\n"
 msgstr ""
 "Kromě Magického Šípu se každé Kouzlo v Balíčku Kouzel objevuje přesně dvakrát.\n"
-"Po přípravě Startovních M\\&M Balíčků všech hráčů se doporučuje odstranit Magické Šípy z Balíčku Kouzel, dokud nezůstanou více než dva.\n"
+"Po přípravě Úvodních M\\&M Balíčků všech hráčů se doporučuje odstranit Magické Šípy z Balíčku Kouzel, dokud nezůstanou více než dva.\n"
 "\n"
 
 #. type: multicols*
@@ -209,7 +209,7 @@ msgid ""
 "At the start of the \\nth{1} Round, each player may reshuffle their hand of Cards back into their Deck of Might and Magic and draw a new starting hand of Cards once.\n"
 "\n"
 msgstr ""
-"Na začátku 1. Kola může každý hráč nejvýše jednou zamíchat Karty na ruce zpět do Balíčku a dobrat si novou startovní ruku.\n"
+"Na začátku 1. Kola může každý hráč nejvýše jednou zamíchat Karty na ruce zpět do Balíčku a dobrat si novou úvodní ruku.\n"
 "\n"
 
 #. type: multicols*
@@ -219,7 +219,7 @@ msgid ""
 "\\subsection*{Tier V--VII Combat on Hard$+$\\\\Difficulty}\n"
 "\n"
 msgstr ""
-"\\subsection*{Boj Úrovně V--VII na Těžkou$+$\\\\Obtížnost}\n"
+"\\subsection*{Souboj Úrovně V--VII na Těžkou$+$\\\\Obtížnost}\n"
 "\n"
 
 #. type: multicols*
@@ -230,8 +230,8 @@ msgid ""
 "For example, a Level VII Combat on Hard will be against 2 × \\svgunit{azure} Neutral Units.\n"
 "\n"
 msgstr ""
-"Boje úrovně V--VII budou mít o 1 nižší obtížnost při hře na Těžkou nebo Nemožnou obtížnost.\n"
-"Například Boj Úrovně VII na Těžkou obtížnost bude proti 2 × \\svgunit{azure} Neutrálním Jednotkám.\n"
+"Souboje úrovně V--VII budou mít o 1 nižší obtížnost při hře na Těžkou nebo Nemožnou obtížnost.\n"
+"Například Souboj Úrovně VII na Těžkou obtížnost bude proti 2 × \\svgunit{azure} Neutrálním Jednotkám.\n"
 "\n"
 
 #. type: multicols*
@@ -301,7 +301,7 @@ msgid ""
 "\\subsection*{Combat with Neutral Units}\n"
 "\n"
 msgstr ""
-"\\subsection*{Boj s Neutrálními Jednotkami}\n"
+"\\subsection*{Souboj s Neutrálními Jednotkami}\n"
 "\n"
 
 #. type: multicols
@@ -311,7 +311,7 @@ msgid ""
 "During Combat with Neutral Units in clash Scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle Board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Pokud se během Boje s Neutrálními Jednotkami ve Scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
+"Pokud se během Souboje s Neutrálními Jednotkami ve Scénářích Střet hráč rozhodne umístit své Jednotky pouze na jednu polovinu (levou nebo pravou) Desky Bojiště, hráč umisťující Neutrální Jednotky musí udělat totéž.\n"
 "\n"
 
 #. type: multicols
@@ -373,7 +373,7 @@ msgstr ""
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_bad.png}\n"
 "    \\caption[bad protected]{\\textit{Toto rozestavení není povoleno, protože hráč Nekropole umístil své Jednotky na levou polovinu Desky Bojiště.\n"
-"      Sedláci musí také začít Boj na levé straně.}}\n"
+"      Sedláci musí také začít Souboj na levé straně.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\mbox{}"
@@ -451,8 +451,8 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item Při rozhodování, kterou budovu postavit ve vašem Městě, zejména na začátku hry, je \\textit{obvykle} nejlepší upřednostnit Jednotky před Radnicí, Citadelou, Cechem Mágů nebo jinými budovami Frakce.\n"
 "  \\item Pokud si nejste jisti, které Kouzlo, Artefakt nebo Dovednost zvolit, upřednostněte ty, které vám pomohou procházet vaším Balíčkem.\n"
-"    To zahrnuje jakékoli Karty, které vám umožňují dobrat Karty nebo získat Karty z vaší Odhazovací Hromádky.\n"
-"  \\item Snažte se vyhnout používání Bodů Pohybu vašeho Hlavního Hrdiny na akce, které může zvládnout váš Vedlejší Hrdina, jako je otáčení Dílků Mapy, návštěva Vodních Kol a podobně.\n"
+"    To zahrnuje jakékoliv Karty, které vám umožňují dobrat Karty nebo získat Karty z vaší Odhazovací Hromádky.\n"
+"  \\item Snažte se vyhnout používání Bodů Pohybu vašeho Hlavního Hrdiny na akce, které může zvládnout váš Sekundární Hrdina, jako je otáčení Dílků Mapy, návštěva Vodních Kol a podobně.\n"
 "\\end{itemize}\n"
 "\n"
 
