--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -129,7 +129,7 @@ msgid ""
 "\\textbf{Starting Resources:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -140,7 +140,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -154,10 +154,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Tlupu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Hrstka \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -486,7 +486,7 @@ msgstr ""
 "  \\item V 7. a 9. Kole házejte pro vyváženější rozložení pouze druhou Kostkou Útoku (K2). Pro K1 vezměte opačný výsledek hodu z předchozího Kola.\n"
 "  Kola 8 a 10 jsou zcela náhodná.\n"
 "  \\item Pokud Dílek, kde se má nepřítel objevit, ještě nebyl objeven, otočte jej a libovolně orientujte.\n"
-"  \\item Pokud je na Poli, kde se nepřítel objeví, Hrdina, začne okamžitě Boj.\n"
+"  \\item Pokud je na Poli, kde se nepřítel objeví, Hrdina, začne okamžitě Souboj.\n"
 "  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
 "  \\item Nepřátelské armády mají 3 MP za Kolo.\n"
 "  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
@@ -502,7 +502,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Combat with\\\\Enemy Armies}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Boj s Nepřátelskými\\\\Armádami}}\n"
+"\\subsection*{\\MakeUppercase{Souboj s Nepřátelskými\\\\Armádami}}\n"
 "\n"
 
 #. type: multicols
@@ -519,7 +519,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Boj s nepřátelskými armádami přes více než jedno Kolo Boje nestojí žádné Body Pohybu.\n"
+"  \\item Souboj s nepřátelskými armádami přes více než jedno Kolo Souboje nestojí žádné Body Pohybu.\n"
 "  \\item Během bitvy s nepřátelskou armádou může Hrdina ustoupit kdykoliv, když se má Aktivovat přátelská Jednotka.\n"
 "    Ustupující hlavní Hrdina ztrácí všechny zbývající BP a je vrácen do spojeneckého Města nebo Osady dle svého výběru, přičemž si ponechává všechny zbývající Jednotky.\n"
 "  \\item Ustupující sekundární Hrdinové jsou Odstraněni ze hry, ale jejich zbývající Jednotky jsou ponechány.\n"
@@ -551,9 +551,9 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item V 10. Kole se objeví Armáda Bosse. Je odlišná od předchozích armád, protože je posílena z předem daného fondu Neutrálních Jednotek (Posilovací fond = číslo v závorkách v tabulce níže).\n"
-"  \\item Na začátku 2. Kola Boje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného Posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v Boji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z Posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
+"  \\item Na začátku 2. Kola Souboje a každého následujícího Kola posilují zbývající armádu 2 Jednotky z promíchaného Posilovacího fondu (až do maxima 5 Jednotek), aby pokračovaly v Souboji, dokud hráč neustoupí nebo dokud nejsou všechny Neutrální Jednotky z Posilovacího fondu zabity. \\textit{Pokud je počet nepřátelských Jednotek na začátku Kola 1 nebo nižší, doplňte až do celkového počtu 4 Jednotek (tj. na desce jsou vždy 4 nebo 5 nepřátelských Jednotek po posílení, pokud jsou k dispozici).}\n"
 "  \\item Umístěte posilující Jednotky na nepřátelskou základní linii, začněte zleva s nejnižší iniciativou (nejprve \\svg{unit_ranged} Jednotky). Pokud je to nutné, pokračujte na další řadu ve stejném pořadí.\n"
-"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Boje.\n"
+"  \\item Když hráč ustoupí, nepřátelská armáda doplní až do \\uv{minimálního} počtu 4 Jednotek a tyto Jednotky si vezme jako výchozí do dalšího Souboje.\n"
 "\\end{itemize}\n"
 "\n"
 
