--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -118,10 +118,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupina \\svgunit{bronze} Jednotek dle tvého výběru\n"
-"  \\item Málo \\svgunit{bronze} Jednotek dle tvého výběru\n"
+"  \\item Tlupa \\svgunit{bronze} Jednotek dle tvého výběru\n"
+"  \\item Hrstka \\svgunit{bronze} Jednotek dle tvého výběru\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -210,7 +210,7 @@ msgid ""
 "\\textbf{Starting Resources:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 5 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -220,7 +220,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -279,7 +279,7 @@ msgid ""
 "Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
-"Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na Dílku I. Každý Dílek II--III obsahuje jeden Důl nebo Osadu s Bojem na Úrovni III.)\n"
+"Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na Dílku I. Každý Dílek II--III obsahuje jeden Důl nebo Osadu s Soubojem na Úrovni III.)\n"
 "\n"
 
 #. type: multicols*
@@ -345,8 +345,8 @@ msgstr ""
 "    \\end{itemize}\n"
 "    \\item Pokud nemáte žádné Jednotky ve svém Balíčku Jednotek (po bitvě nebo pokud si neuchováte alespoň jednu Jednotku), vraťte všechny své Jednotky do Balíčku Jednotek své Frakce (i když jiný hráč má jednu nebo více vašich Jednotek). To zahrnuje i Jednotky, které jste dříve předali jinému hráči.\n"
 "    \\item Když jste ve Městě jiného hráče, můžete Naverbovat nebo Posílit jejich Jednotky, buď pro daného hráče nebo pro sebe. Potřebujete k tomu povolení druhého hráče, a musí k tomu být postavena odpovídající Obydlí nebo Citadela.\n"
-"    \\item Pro poslední Boj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento Boj máte neomezený počet Tahů. K přeskočení tohoto Boje nemůžete použít Expertní Diplomacii!\n"
-"    \\item Poprvé, když dosáhnete Úrovně IV, získáte svou druhou specializaci.\n"
+"    \\item Pro poslední Souboj o Důl/Osadu přidejte \\svgunit{golden} Neutrální Jednotku. Pro tento Souboj máte neomezený počet Tahů. K přeskočení tohoto Souboje nemůžete použít Pokročilou Diplomacii!\n"
+"    \\item Poprvé, když dosáhnete Úrovně IV, získáte svou druhou Kartu Zaměření.\n"
 "    \\item Když dosáhnete Úrovně IV, přesuňte svůj Žeton na počítadle Úrovní na Úroveň III.\n"
 "    \\item Navíc žádný hráč nemůže:\n"
 "    \\begin{itemize}\n"
