--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -38,7 +38,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Úvodní Příjem:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -52,10 +52,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Jednotky:}\n"
+"\\textbf{Úvodní Jednotky:}\n"
 "\\begin{itemize}\n"
-"  \\item Skupinu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
-"  \\item Málo \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
+"  \\item Tlupu \\svgunit{bronze} Jednotek s \\textit{nejnižšími} náklady na Verbování\n"
+"  \\item Hrstka \\svgunit{bronze} Jednotek s \\textit{nejvyššími} náklady na Verbování\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -213,7 +213,7 @@ msgid ""
 "\\textbf{Starting Resources:} 15 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Počáteční Suroviny:} 15 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\\textbf{Úvodní Suroviny:} 15 \\svg{gold}, 4 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -254,7 +254,7 @@ msgstr ""
 "  \\item 2 × Startovní (I) Dílek Mapy\n"
 "  \\item 2 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 2 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Miniaturu představující Draka do středu Dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Figurku představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -276,7 +276,7 @@ msgstr ""
 "  \\item 3 × Startovní (I) Dílek Mapy\n"
 "  \\item 3 × Blízký (IV--V) Dílek Mapy\n"
 "  \\item 3 × Vzdálený (II--III) Dílek Mapy\n"
-"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Miniaturu představující Draka do středu Dílku\n"
+"  \\item 1 × Středový (VI--VII) Dílek Mapy; umístěte Černou Kostičku nebo Figurku představující Draka do středu Dílku\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -367,12 +367,12 @@ msgstr ""
 "  \\item Pouze Hlavní Hrdina může zabít Draka.\n"
 "  \\item Závěrečná bitva s Drakem se odehrává na středovém Poli Středového Dílku mapy.\n"
 "    Prosím, odkažte se na pravidla setkání uvedená u vybraného Dračího Bosse.\n"
-"  \\item Při Boji s Dračím Bossem ignorujte speciální schopnost Gorgony.\n"
+"  \\item Při Souboji s Dračím Bossem ignorujte speciální schopnost Gorgony.\n"
 "  \\item Hrdinové nemohou ustoupit z bitev s Dračím Bossem.\n"
 "  \\item Když každý hráč navštíví Obelisk, může si vybrat, zda hodí Kostkou Pokladu nebo získá 1 \\svg{experience}.\n"
 "  \\item Hráči mohou každý Obelisk navštívit pouze jednou.\n"
 "    Poté musí na Pole umístit svou Kostičku Frakce.\n"
-"  \\item V setkání s bossem není žádný limit Kol Boje.\n"
+"  \\item V setkání s bossem není žádný limit Kol Souboje.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -438,24 +438,24 @@ msgstr ""
 "jen pár lidí a ještě méně jich přežilo jeho útoky. Toto mocné stvoření není "
 "o moc větší než většina draků, ale říká se, že je schopné vydržet dlouhodobý "
 "fyzický útok. Říká se, že ti, kdo stojí tváří v tvář Azurovému Drakovi, mají "
-"tendenci zamrznout čistým strachem. } \\medskip \\\\ \\textbf{Boj s Azurovým "
-"Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Azurového Draka "
-"na Bojiště. Ignorujte jeho schopnost. \\item Připravte hromádku odhozených "
-"Artefaktů a zamíchejte ji. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item \\textit{Shromažďovací Tendence:} Na začátku každého "
-"tahu náhodně vyberte Kartu z promíchané hromádky odhozených artefaktů. Pokud "
-"je artefakt: \\begin{itemize} \\item Zbraň: Drak získá jeden Dechový útok, "
-"který zasáhne tři Jednotky v řadě. Jednotka přímo zasažená uprostřed utrpí "
-"plné poškození, zatímco Jednotky po obou stranách utrpí o 3\\,\\svg{damage-"
-"red} méně. \\item Kus brnění, štítu nebo oblečení: Drak získá 3\\,"
-"\\svg{defense}, což je znázorněno náhradními Kostičkami Frakce. Odstraňte je "
-"poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
-"ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
-"následek, že každá Jednotka se pohybuje pouze o 1 Pole za Kolo, zatímco "
-"Azurový Drak může letět na jakékoli Pole na Desce Bojiště. \\end{itemize} "
-"\\item Azurový Drak je imunní vůči všem Kouzlům seslaným proti němu. \\item "
-"Posílení a vylepšení seslaná na Jednotky hráče zůstávají účinná. "
-"\\end{itemize} }"
+"tendenci zamrznout čistým strachem. } \\medskip \\\\ \\textbf{Souboj s "
+"Azurovým Drakem:} \\begin{enumerate} \\item Umístěte Figurku/Kartu Azurového "
+"Draka na Bojiště. Ignorujte jeho schopnost. \\item Připravte hromádku "
+"odhozených Artefaktů a zamíchejte ji. \\end{enumerate} \\medskip "
+"\\textbf{Pravidla:} \\begin{itemize} \\item \\textit{Shromažďovací "
+"Tendence:} Na začátku každého tahu náhodně vyberte Kartu z promíchané "
+"hromádky odhozených artefaktů. Pokud je artefakt: \\begin{itemize} \\item "
+"Zbraň: Drak získá jeden Dechový útok, který zasáhne tři Jednotky v řadě. "
+"Jednotka přímo zasažená uprostřed utrpí plné poškození, zatímco Jednotky po "
+"obou stranách utrpí o 3\\,\\svg{damage-red} méně. \\item Kus brnění, štítu "
+"nebo oblečení: Drak získá 3\\,\\svg{defense}, což je znázorněno náhradními "
+"Kostičkami Frakce. Odstraňte je poté, co absorbují poškození. \\item Cetka: "
+"Azurový Drak zařve a přivolá ledovou bouři, která způsobí, že všechny "
+"bytosti zamrznou strachem. To má za následek, že každá Jednotka se pohybuje "
+"pouze o 1 Pole za Kolo, zatímco Azurový Drak může letět na jakékoliv Pole na "
+"Desce Bojiště. \\end{itemize} \\item Azurový Drak je imunní vůči všem "
+"Kouzlům seslaným proti němu. \\item Posílení a vylepšení seslaná na Jednotky "
+"hráče zůstávají účinná. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:170
@@ -532,24 +532,25 @@ msgstr ""
 "magickými prostředky. Je doslova poloprůhledný, osvětlený ze středu svým "
 "magickým srdcem. Často se používá jako výcvikový nástroj pro mladé zabijáky "
 "draků a mnoho kouzelníků také vytváří tato stvoření kvůli krystalu, který "
-"vylučují. } \\medskip \\\\ \\textbf{Boj s Krystalovým Drakem:} "
-"\\begin{enumerate} \\item Umístěte Miniaturu/Kartu Krystalového Draka na "
+"vylučují. } \\medskip \\\\ \\textbf{Souboj s Krystalovým Drakem:} "
+"\\begin{enumerate} \\item Umístěte Figurku/Kartu Krystalového Draka na "
 "bojiště. Ignorujte jeho schopnost. \\item Umístěte dva Zlaté Golemy a dva "
 "Diamantové Golemy na bojiště. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Na začátku každého Kola Boje zkontrolujte, zda byli "
-"v předchozím Kole odstraněni nějací Golemové. Pokud ano, vyvolejte jednoho "
-"nového Diamantového nebo Zlatého Golema (vybraného náhodně) do poslední řady "
-"bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak může žrát Golemy, "
-"aby si obnovil zdraví. Během svého tahu, pokud je Krystalový Drak vedle "
-"Golema, může se rozhodnout ho sežrat, čímž odstraní určité množství "
-"\\svg{damage-red} podle typu sežraného Golema: \\begin{itemize} \\item Zlatý "
-"Golem: Odstraňte 2 \\svg{damage-red}. \\item Diamantový Golem: Odstraňte 4 "
-"\\svg{damage-red}. \\item[] \\textbf{Poznámka:} Krystalový Drak může během "
-"svého tahu sežrat pouze jednoho Golema. \\end{itemize} \\item Schopnosti "
-"Golemů: Zlatí a Diamantoví Golemové nemají žádné další schopnosti nad rámec "
-"těch, které jsou uvedeny na jejich kartách. Slouží především jako potrava "
-"pro regeneraci zdraví Krystalového Draka. \\item Krystalový Drak má "
-"\\textit{Odvetný útok dvakrát} za Kolo Boje. \\end{itemize} }"
+"\\begin{itemize} \\item Na začátku každého Kola Souboje zkontrolujte, zda "
+"byli v předchozím Kole odstraněni nějací Golemové. Pokud ano, vyvolejte "
+"jednoho nového Diamantového nebo Zlatého Golema (vybraného náhodně) do "
+"poslední řady bojiště. \\item \\textit{Požírání Golemů:} Krystalový Drak "
+"může žrát Golemy, aby si obnovil zdraví. Během svého tahu, pokud je "
+"Krystalový Drak vedle Golema, může se rozhodnout ho sežrat, čímž odstraní "
+"určité množství \\svg{damage-red} podle typu sežraného Golema: "
+"\\begin{itemize} \\item Zlatý Golem: Odstraňte 2 \\svg{damage-red}. \\item "
+"Diamantový Golem: Odstraňte 4 \\svg{damage-red}. \\item[] "
+"\\textbf{Poznámka:} Krystalový Drak může během svého tahu sežrat pouze "
+"jednoho Golema. \\end{itemize} \\item Schopnosti Golemů: Zlatí a Diamantoví "
+"Golemové nemají žádné další schopnosti nad rámec těch, které jsou uvedeny na "
+"jejich kartách. Slouží především jako potrava pro regeneraci zdraví "
+"Krystalového Draka. \\item Krystalový Drak má \\textit{Odvetný útok dvakrát} "
+"za Kolo Souboje. \\end{itemize} }"
 
 #. type: Plain text
 #: clash/the_hunt.tex:235
@@ -628,17 +629,17 @@ msgstr ""
 "loví Gorgony a žijí a krmí se v sirných dolech. S tímto apetitem Rezaví "
 "Draci jako svůj hlavní útok vypouštějí koncentrovanou kyselinu. Tato "
 "kyselina je schopna prokousat se nejsilnějším brněním, snížit obranu svého "
-"cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Boj s "
-"Rezavým Drakem:} \\begin{enumerate} \\item Umístěte Miniaturu/Kartu Rezavého "
+"cíle a zároveň způsobit další poškození. } \\medskip \\\\ \\textbf{Souboj s "
+"Rezavým Drakem:} \\begin{enumerate} \\item Umístěte Figurku/Kartu Rezavého "
 "Draka na bojiště. Ignorujte jeho schopnost. \\item Připravte čtyři náhradní "
 "Karty Balíčku M\\&M k označení kaluží kyseliny. \\end{enumerate} \\medskip "
 "\\textbf{Pravidla:} \\begin{itemize} \\item Rezavý Drak je imunní vůči "
-"základním Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
+"bežným Kouzlům. \\item \\textit{Korozivní Zvratky:} Rezavý Drak má mocnou "
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
-"kyseliny na bojiště \\textit{na začátku} každého Kola Boje. Použijte Karty "
-"Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item Rezavý "
-"Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. Označte "
-"Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
+"kyseliny na bojiště \\textit{na začátku} každého Kola Souboje. Použijte "
+"Karty Balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
+"Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím Kole. "
+"Označte Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
 "umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
 "pouze na jedno Kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
 "\\item Pasivní schopnost Rezavého Draka, \\textit{Koroze}, snižuje brnění "
@@ -725,18 +726,18 @@ msgstr ""
 "v pohádkových knížkách než v magických spisech. Někteří říkají, že jsou "
 "neviditelní. Někteří říkají, že umí sesílat kouzla. Někteří říkají, že "
 "Zrcadlo kouzel je jednou z jejich přirozených obranných vlastností. } "
-"\\medskip \\\\ \\textbf{Boj s Pohádkovým Drakem:} \\begin{enumerate} \\item "
-"Umístěte 2 Karty Pohádkového Draka na bojiště. Ignorujte jejich schopnosti. "
-"\\item Umístěte 1 Kartu Dendroida z \\svg{silver} Balíčku neutrálních "
-"Jednotek na bojiště a umístěte 3 další Karty lícem dolů, aby představovaly "
-"další 3 Dendroidy. \\end{enumerate} \\medskip \\textbf{Pravidla:} "
-"\\begin{itemize} \\item Pohádkový Drak je imunní vůči základním Kouzlům. "
-"\\item Pohádkový Drak může seslat až dvě různá Kouzla za Kolo Boje. \\item "
-"Všechna Kouzla jsou viditelně zobrazena vedle Desky Bojiště: "
-"\\begin{enumerate} \\item První Kouzlo je \\textit{Blesk}. \\item Druhé "
-"Kouzlo je \\textit{Léčení}. \\item Pro třetí Kouzlo Pohádkový Drak náhodně "
-"vybere Expertní Kouzlo z Balíčku Kouzel, s výjimkou Kouzel Mapa \\svg{map}. "
-"Pokud je vybráno Kouzlo Mapa \\svg{map}, vytáhněte další Kouzlo. "
+"\\medskip \\\\ \\textbf{Souboj s Pohádkovým Drakem:} \\begin{enumerate} "
+"\\item Umístěte 2 Karty Pohádkového Draka na bojiště. Ignorujte jejich "
+"schopnosti. \\item Umístěte 1 Kartu Dendroida z \\svg{silver} Balíčku "
+"neutrálních Jednotek na bojiště a umístěte 3 další Karty lícem dolů, aby "
+"představovaly další 3 Dendroidy. \\end{enumerate} \\medskip "
+"\\textbf{Pravidla:} \\begin{itemize} \\item Pohádkový Drak je imunní vůči "
+"běžným Kouzlům. \\item Pohádkový Drak může seslat až dvě různá Kouzla za "
+"Kolo Souboje. \\item Všechna Kouzla jsou viditelně zobrazena vedle Desky "
+"Bojiště: \\begin{enumerate} \\item První Kouzlo je \\textit{Blesk}. \\item "
+"Druhé Kouzlo je \\textit{Léčení}. \\item Pro třetí Kouzlo Pohádkový Drak "
+"náhodně vybere Pokročilé Kouzlo z Balíčku Kouzel, s výjimkou Kouzel Mapa "
+"\\svg{map}. Pokud je vybráno Kouzlo Mapa \\svg{map}, vytáhněte další Kouzlo. "
 "\\end{enumerate} \\item \\textit{Šprýmař:} V prvním Kole bitvy je první "
 "zacílený Pohádkový Drak pouhým Přeludem. Způsobuje poškození, ale zmizí z "
 "bojiště, když je zasažen nepřítelem. \\item Schopnost Dendroidů: Každý "
